# GraphC

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build-run-unix.sh  build-test-manual.sh  cmake_install.cmake  main.py  out.csv  out.txt
build-unix/: CMakeCache.txt  GraphC  Makefile  cmake_install.cmake
include/collections/: array.h  queue.h
include/combinations/: choose.h  xoshiro.h
include/graph/: graph.h
include/programs/: maxmatching.h  petersen.h  queuetest.h  randomgraph.h  samplingdistribution.h
include/sample/: sample.h
include/sqlite3_helpers/: batcher.h
src/: main.c
src/collections/: array.c  queue.c
src/combinations/: choose.c  xoshiro.c
src/graph/: graph.c
src/programs/: maxmaching.c  maxmatching.c  petersen.c  queuetest.c  randomgraph.c  samplingdistribution.c
src/sample/: sample.c
src/sqlite3_helpers/: batcher.c
